adjusting mobile devices responsiveness

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="content">
         <div class="block-container">
             <section class="about">
-                <div>
+                <div class="my-info">
                     <h1 id="main-title"><a id="title" name="about">ABOUT ME</a></h1>
                     <hr>
                     <br>
@@ -60,7 +60,7 @@
                     <img class="daughters" src="./images/princesas.JPG" heigth="200" width="300" alt="princesses">
                 </div>
                 <div>
-                    <h3 class="big-centered">This is also me!   <span><i class="fas fa-chevron-right"></i></span></h3>
+                    <h3 class="big-centered">This is also me!<span class="hidden-icon"><i class="fas fa-chevron-right"></i></span></h3>
                 </div>
                 <div class="container-pics">
                     <img src="./images/EEF2532B-C0B0-4502-9ACC-200F4E4A4A18_1_105_c.jpeg" heigth="300" width="400" alt="work-station">
@@ -89,7 +89,7 @@
                     <span class="icon-bigger"><i class="fab fa-html5"></i></span>
                     <span class="icon-bigger"><i class="fab fa-js-square"></i></span>
                     <span class="icon-bigger"><i class="fab fa-react"></i></span>
-                    <p>In its order, Bootstrap, Sass, CSS3, HTML5, JavaScript and React JS.</p>
+                    <p>In their order, Bootstrap, Sass, CSS3, HTML5, JavaScript and React JS.</p>
                 </div>
                 <div>
                     <br>
@@ -102,7 +102,7 @@
                     <span class="icon-bigger"><i class="fab fa-node"></i></span> 
                     <span class="icon-bigger"><i class="fab fa-js"></i></span> 
                     <span class="icon-bigger"><i class="fas fa-database"></i></span> 
-                    <p>In its order, Node JS, Express JS and MongoDB</p>
+                    <p>In their order, Node JS, Express JS and MongoDB</p>
                 </div>
             </section>
             
@@ -110,7 +110,7 @@
         <hr>
         <div class="block-container">
             <section class="projects">
-                <div>
+                <div class="project-div">
                     <h3 id="projects-title"><a id="ptitle" name="projects"> PROJECTS</a></h3>
                     <br>
                     <p class="spacing"><b><a href="https://alejandro-lopez561.github.io/monsters/">MONSTERS ROLODEX</a></b></p>
