fixed path on images

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div>
                     <div class="container-pics">
-                        <img src="/images/bogota.jpg" alt="Bogota">
+                        <img src="./images/bogota.jpg" alt="Bogota">
                     </div>
                 </div>
                 <div class="col">
@@ -70,7 +70,7 @@
                 </div>
                 <div>
                     <div class="container-pics">
-                        <img src="/images/me-sydney.PNG" alt="Me knowing Sydney">
+                        <img src="./images/me-sydney.PNG" alt="Me knowing Sydney">
                     </div>
                 </div>   
                 <div class="col">
@@ -85,7 +85,7 @@
                 </div>
                 <div>
                     <div class="container-pics">
-                        <img src="/images/work-station-au.jpg" alt="Work/Study station Australia">
+                        <img src="./images/work-station-au.jpg" alt="Work/Study station Australia">
                     </div>
                     <hr>
                 </div>
