--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Alejandro Lopez | Front-End Web Developer">
+    <meta name="keywords" content="Front-End, Web Development, HTML, CSS, JavaScript">
+    <meta name="author" content="Alejandro Lopez | Web Developer">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
@@ -47,7 +50,7 @@
                 <h2>ABOUT ME</h2>
             </div>
             <div class="grid-container">
-                <div class="col">
+                <div class="col-l">
                     <p>My name is Luis Alejandro, but I would rather Alejandro&nbsp;😏.</p>
                     <p>I’m from Colombia 🇨🇴, and I’m currently located in Bogotá, the capital. <br>Bogotá is one of the cities with the highest demand of developers and tech companies in the&nbsp;country.</p>
                     <p>
@@ -59,7 +62,7 @@
                         <img src="./images/bogota.jpg" alt="Bogota">
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-l">
                     <p>
                         I went to Australia and lived there for 3 years. I studied, worked, and made a life there pursuing one goal: becoming a better person by improving personal, academic and professional. 
                     </p>
@@ -73,7 +76,7 @@
                         <img src="./images/me-sydney.PNG" alt="Me knowing Sydney">
                     </div>
                 </div>   
-                <div class="col">
+                <div class="col-l">
                     <p>
                         I started to study programming, almost 7 months after I got to Australia, and since then, 
                         I knew that coding is what I wanna do&nbsp;always.
@@ -89,13 +92,13 @@
                     </div>
                     <hr>
                 </div>
-                <div class="col-2">
+                <div class="">
                     <div class="container-pics">
                         <img class="daughters" src="./images/princesas.JPG" alt="princesses">
                     </div>
                 </div>
                 
-                <div class="col">
+                <div class="col-r">
                     <p>
                         Beggining 2021, I got back to Colombia with a purpose, improve myself everyday as a developer. 
                         I really love being a developer because is you wanna be good at coding, you gotta learn every single day.
@@ -112,7 +115,7 @@
                         <img src="./images/work-station.jpeg" alt="work-station">
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-r">
                     <p class="">This is also me!</p>    
                     <p class="">This is my work/study station. Willing to improve my setup for something bigger and fancier. Little by&nbsp;little.</p>
                     <p>About my technical skills, I will tell you more about them in a&nbsp;sec.</p>
@@ -182,7 +185,7 @@
                 <h2>PROJECTS</h2>
             </div>
             <div class="grid-container">
-                <div class="col">
+                <div class="col col-l">
                     <h3>
                         <a href="https://alejandro-lopez561.github.io/landing-page/" target="_blank">RESPONSIVE LANDING PAGE</a>
                     </h3>
@@ -207,7 +210,7 @@
                         <a href="https://alejandro-lopez561.github.io" target="_blank"><img src="./images/budget-app.png" heigth="220" width="330"alt="budget"></a>
                     </div>
                 </div>
-                <div class="">
+                <div class="col-r">
                     <h3>
                         <a href="https://alejandro-lopez561.github.io" target="_blank">BUDGET APP</a>
                     </h3>
@@ -220,7 +223,7 @@
             </div>
             <hr>
             <div class="grid-container">
-                <div class="col">
+                <div class="col col-l">
                     <h3>
                         <a href="https://alejandro-lopez561.github.io/pig-game/" target="_blank">THE PIG GAME</a>
                     </h3>
